# HappyFigure

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  cli.py  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
agents/: __init__.py  claude_code.py  codex.py  copilot.py  gemini.py  opencode.py
configs/: __init__.py  example_proposal.txt  pipeline.yaml  pipeline_override.yaml  services.yaml
configs/method_examples/: README.md  arch1.txt  arch3.txt  arch4.txt  f4p_assets_Dispersion_motivation.txt  f4p_assets_ImmunoStruct_contrastive.txt  f4p_assets_ImmunoStruct_schematic.txt  f4p_assets_RNAGenScape_schematic.txt
configs/multi_panel_examples/: arch2.txt  f4p_assets_Dispersion_observation.txt  f4p_assets_ImmunoStruct_results_CEDAR.txt  f4p_assets_ImmunoStruct_results_IEDB.txt  figure4paper.py
configs/statistical_examples/: README.md
configs/visualization/: f4p_figure_Cflows_diffusion_swiss_roll.py  f4p_figure_Cflows_diffusion_swiss_roll.txt  f4p_figure_Dispersion_idea.py  f4p_figure_Dispersion_idea.txt  f4p_figure_Dispersion_illustration.py  f4p_figure_Dispersion_illustration.txt  f4p_figure_RNAGenScape_manifold.py  f4p_figure_RNAGenScape_manifold.txt  f4p_figure_RNAGenScape_manifold_holes.py  f4p_figure_RNAGenScape_manifold_holes.txt
docs/: CONFIGURATION.md  LLM_ROUTING.md  ONBOARD.md  REFERENCES.md  SERVICES.md  SKILLS.md  cheatsheet.md
graphs/: __init__.py  _method_shared.py  figure_pipeline.py  pipeline_helpers.py  spec_fallback.py  svg_method_pipeline.py  svg_utils.py
llm/: __init__.py  gemini_example.py  gpt_example.py
llm/providers/: __init__.py  anthropic_provider.py  azure_provider.py  bedrock_provider.py  google_provider.py  openai_provider.py
pipeline/: __init__.py  agent_runtime.py  assembly.py  composite_generation.py  context.py  contracts.py  drawing.py  feedback.py  figure_lint.py  pipeline_backend.py  plot_beam.py  plot_execution.py  plot_planning.py  prompt.py  proposal_loader.py  run_state.py  service_launcher.py
pipeline/orchestrator/: __init__.py  artifacts.py  main.py  modes.py  steps.py  strategies.py
prompts/: __init__.py
prompts/agents/: build.md  code-agent.md  code-explore.md  data-explore.md  exp-explore.md  figure-critic.md  figure-planner.md  happyfigure-orchestrator.md  method-explore.md  planner-stylist.md  style-variant.md  svg-author.md  svg-builder.md  svg-refiner.md  (+1 more)
scripts/: __init__.py  evaluate_pipeline.py  figure_critic_cli.py  pipeline_cli.py
tests/: conftest.py  test_auth_checks.py  test_config.py  test_evaluate_pipeline.py  test_figure_lint.py  test_figure_pipeline.py  test_gpt_init.py  test_orchestrator.py  test_pipeline_cli.py  test_proposal_loader.py  test_providers.py  test_refactor_regressions.py  test_spec_fallback.py  test_svg_utils.py  test_tools.py  test_ui.py
tools/: __init__.py  code_analyzer.py  critic_tools.py  data_tools.py  sandbox.py  tool_schemas.py
ui/: __init__.py  app.py  stream_parsers.py
(+90 files in other folders)
